[tool.poetry]
name = "pyspark-functions"
version = "0.1.0"
description = ""
authors = ["mingiryu <mingi.ryu@icloud.com>"]
readme = "README.md"
packages = [{include = "pyspark_functions"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
ipython = "^8.14.0"
pandas = "^2.0.2"
pyspark = "^3.4.0"
pyarrow = "^12.0.1"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
